tests/ui/closures/2229_closure_analysis/diagnostics/closure-origin-tuple-diagnostics-1.stderr
error[E0382]: use of moved value: `hello`
  --> $DIR/closure-origin-tuple-diagnostics-1.rs:12:13
   |
LL |     let b = hello;
   |             ----- value moved here
LL |     let c = hello;
   |             ^^^^^ value used here after move
   |
note: closure cannot be moved more than once as it is not `Copy` due to moving the variable `x.0` out of its environment
  --> $DIR/closure-origin-tuple-diagnostics-1.rs:8:9
   |
LL |         x.0 += 1;
   |         ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
